--- a/index.html
+++ b/index.html
@@ -67,20 +67,21 @@
                 <h2>& engagement models</h2>
             </div>
             <div id="page3-ele">
+                
                 <div class="box" id="Coded Website">
                     <img src="https://images.prismic.io/rejouice/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+%281%29.jpg?auto=compress,format"
                         alt="">
-                    <video src="assets/Website-homepage-Work-01_1.mp4" loop muted autoplay></video>
+                    <video src="" loop muted autoplay></video>
                 </div>
                 <div class="box" id="Shopify">
                     <img src="https://images.prismic.io/rejouice/e0350a3d-c390-4d97-af1a-5c86bc822b52_Group+3929.jpg?auto=compress,format"
                         alt="">
-                    <video src="assets/Website-homepage-Work-02_1.mp4" loop muted autoplay></video>
+                    <video src="" loop muted autoplay></video>
                 </div>
                 <div class="box" id="Wix">
                     <img src="https://images.prismic.io/rejouice/2874f084-ec6c-4a19-b025-a55c1e6db929_Group+3692.jpg?auto=compress,format"
                         alt="">
-                    <video src=assets/Website-homepage-Work-03_1.mp4" loop muted autoplay></video>
+                    <video src="" loop muted autoplay></video>
                 </div>
             </div>
 
@@ -170,7 +171,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
         integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/Files/Canvas.js"></script>
+    <script src="Canvas.js"></script>
     <script src="script.js"></script>
 </body>
 
