adding  marquee-anime in hero section

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         </div> -->
 
-        <div id="cursor"
+        <!-- <div id="cursor"
             class="curson h-8 w-8 rounded-full fixed z-10 flex items-center justify-center bg-transparent border  -translate-x-1/2 -translate-y-1/2">
-        </div>
+        </div> -->
 
         <div class="Header w-full ">
 
@@ -34,27 +34,27 @@
 
                     <!-- NavBar section  -->
                     <div class="navbar  fixed top-0  left-1/2  -translate-x-1/2  ">
-                        <nav class="flex justify-between w-[55rem] items-center p-4  rounded-full shadow-lg">
-                            <div class="text-2xl font-bold text-foreground">Shape.</div>
+                        <nav class="flex justify-between w-[55rem] items-center p-4 bg-[rgba(255,255,255,0.46)]  rounded-full shadow-lg">
+                            <div class="text-2xl font-bold ">Shape.</div>
                             <ul class="flex space-x-6">
                                 <li class="relative">
-                                    <a href="#" class="text-muted-foreground hover:text-primary">Services</a>
+                                    <a href="#" class="">Services</a>
 
                                 </li>
                                 <li>
-                                    <a href="#" class="text-muted-foreground hover:text-primary">Work</a>
+                                    <a href="#" class="">Work</a>
                                 </li>
                                 <li>
-                                    <a href="#" class="text-muted-foreground hover:text-primary">About</a>
+                                    <a href="#" class="">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="#" class="text-muted-foreground hover:text-primary">Contact</a>
+                                    <a href="#" class="">Contact</a>
                                 </li>
                             </ul>
                             <div class="flex items-center space-x-2">
                                 <button
-                                    class="bg-slate-200 rounded-full text-secondary-foreground hover:bg-secondary/80 p-2 ">Start
+                                    class="bg- rounded-full  bg-[rgba(255,255,255,0.46)]  hover:bg-[rgba(255,255,255,0.73)] p-2 ">Start
                                     a project</button>
                             </div>
                         </nav>
@@ -67,6 +67,19 @@
 
                     </canvas>
 
+                    <div id="marquee-anime  "
+                        class="w-full absolute mt-4 top-1/2 left-1/2 -translate-x-1/2 -translate-y-[20%] overflow-hidden ">
+                        <div class="elem  whitespace-nowrap ">
+                            <h1
+                                class="text-[10rem] uppercase inline-block text-stroke text-transparent animate-marquee">
+                                Overtake time with us
+                            </h1>
+                            <h1
+                                class="text-[10rem] uppercase inline-block text-stroke text-transparent animate-marquee">
+                                Overtake time with us
+                            </h1>
+                        </div>
+                    </div>
 
                 </div>
             </div>
