--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Variable</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -26,37 +27,35 @@
             class="curson h-8 w-8 rounded-full fixed z-10 flex items-center justify-center bg-transparent border  -translate-x-1/2 -translate-y-1/2">
         </div> -->
 
-        <div class="Header w-full ">
+        <div  class="Header w-full ">
 
 
-            <div class="parent relative top-0 left-0 w-full h-[350vh] ">
+            <div class="parent relative top-0 left-0 w-full h-[120vh] ">
                 <div class="  w-full sticky top-0 left-0 h-screen">
 
                     <!-- NavBar section  -->
-                    <div class="navbar  fixed top-0  left-1/2  -translate-x-1/2  ">
-                        <nav class="flex justify-between w-[55rem] items-center p-4 bg-[rgba(255,255,255,0.46)]  rounded-full shadow-lg">
-                            <div class="text-2xl font-bold ">Shape.</div>
-                            <ul class="flex space-x-6">
+                    <div
+                        class="navbar hidden md:block lg:block  mt-10 fixed top-0  z-50 left-1/2  -translate-x-1/2  ">
+                        <nav
+                            class="flex justify-between w-[55rem] items-center p-4 bg-[rgb(0,0,0)]  rounded-full shadow-lg">
+                            <div class="text-2xl font-bold text-center uppercase text-white ">[Veriable]</div>
+                            <ul class="md:flex lg:flex space-x-6 hidden text-white">
                                 <li class="relative">
-                                    <a href="#" class="">Services</a>
+                                    <a href="#Services" class="">Services</a>
 
                                 </li>
                                 <li>
-                                    <a href="#" class="">Work</a>
+                                    <a href="#project" class="">Work</a>
                                 </li>
                                 <li>
-                                    <a href="#" class="">About</a>
+                                    <a href="#About" class="">About</a>
                                 </li>
 
                                 <li>
-                                    <a href="#" class="">Contact</a>
+                                    <a href="#Contact" class="">Contact</a>
                                 </li>
                             </ul>
-                            <div class="flex items-center space-x-2">
-                                <button
-                                    class="bg- rounded-full  bg-[rgba(255,255,255,0.46)]  hover:bg-[rgba(255,255,255,0.73)] p-2 ">Start
-                                    a project</button>
-                            </div>
+
                         </nav>
 
                     </div>
@@ -69,13 +68,13 @@
 
                     <div id="marquee-anime  "
                         class="w-full absolute mt-4 top-1/2 left-1/2 -translate-x-1/2 -translate-y-[20%] overflow-hidden ">
-                        <div class="elem  whitespace-nowrap ">
+                        <div class="elem  whitespace-nowrap  ">
                             <h1
                                 class="text-[10rem] uppercase inline-block text-stroke text-transparent animate-marquee">
                                 Overtake time with us
                             </h1>
                             <h1
-                                class="text-[10rem] uppercase inline-block text-stroke text-transparent animate-marquee">
+                                class="text-[10rem] uppercase inline-block text-stroke  text-transparent animate-marquee">
                                 Overtake time with us
                             </h1>
                         </div>
@@ -88,36 +87,153 @@
 
         </div>
 
-        <div id="page3">
-            <div id="page3-top">
-                <h4>Agency & Venture <samp>Models</samp></h4>
-                <h2>Explore our services</h2>
-                <h2>& engagement models</h2>
-            </div>
-            <div id="page3-ele">
+        <!-- Project section -->
+        <div id="project" class="project">
+            <div class="bg-black text-foreground text-white p-8">
+                <h1 class="text-4xl font-bold mb-4">Project Index </h1>
 
-                <div class="box" id="Coded Website">
-                    <img src="https://images.prismic.io/rejouice/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+%281%29.jpg?auto=compress,format"
-                        alt="">
-                    <video src="" loop muted autoplay></video>
-                </div>
-                <div class="box" id="Shopify">
-                    <img src="https://images.prismic.io/rejouice/e0350a3d-c390-4d97-af1a-5c86bc822b52_Group+3929.jpg?auto=compress,format"
-                        alt="">
-                    <video src="" loop muted autoplay></video>
-                </div>
-                <div class="box" id="Wix">
-                    <img src="https://images.prismic.io/rejouice/2874f084-ec6c-4a19-b025-a55c1e6db929_Group+3692.jpg?auto=compress,format"
-                        alt="">
-                    <video src="" loop muted autoplay></video>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <div
+                        class="bg-zinc-400 rounded-lg overflow-hidden shadow-lg transition-transform transform hover:scale-105">
+                        <img src="https://placehold.co/300x200" alt="delio project" class="w-full h-48 object-cover" />
+                        <div class="p-4 text-white">
+                            <h2 class="font-semibold text-lg">delio</h2>
+                            <p class="text-muted-foreground">Delivering a new mobile standard for an online grocery
+                                disruptor</p>
+                        </div>
+                    </div>
+                    <div
+                        class="bg-zinc-400 rounded-lg overflow-hidden shadow-lg transition-transform transform hover:scale-105">
+                        <img src="https://placehold.co/300x200" alt="KFC project" class="w-full h-48 object-cover" />
+                        <div class="p-4 text-white">
+                            <h2 class="font-semibold text-lg">KFC</h2>
+                            <p class="text-muted-foreground">Serving up a coherent omnichannel experience for five key
+                                European markets</p>
+                        </div>
+                    </div>
+                    <div
+                        class="bg-zinc-400 rounded-lg overflow-hidden shadow-lg transition-transform transform hover:scale-105">
+                        <img src="https://placehold.co/300x200" alt="QIWA project" class="w-full h-48 object-cover" />
+                        <div class="p-4 text-white">
+                            <h2 class="font-semibold text-lg">QIWA</h2>
+                            <p class="text-muted-foreground">Putting creativity to work for Saudi’s labour market
+                                platform</p>
+                        </div>
+                    </div>
+                    <div
+                        class="bg-zinc-400 rounded-lg overflow-hidden shadow-lg transition-transform transform hover:scale-105">
+                        <img src="https://placehold.co/300x200" alt="delio project" class="w-full h-48 object-cover" />
+                        <div class="p-4 text-white">
+                            <h2 class="font-semibold text-lg">delio</h2>
+                            <p class="text-muted-foreground">Delivering a new mobile standard for an online grocery
+                                disruptor</p>
+                        </div>
+                    </div>
+                    <div
+                        class="bg-zinc-400 rounded-lg overflow-hidden shadow-lg transition-transform transform hover:scale-105">
+                        <img src="https://placehold.co/300x200" alt="KFC project" class="w-full h-48 object-cover" />
+                        <div class="p-4 text-white">
+                            <h2 class="font-semibold text-lg">KFC</h2>
+                            <p class="text-muted-foreground">Serving up a coherent omnichannel experience for five key
+                                European markets</p>
+                        </div>
+                    </div>
+                    <div
+                        class="bg-zinc-400 rounded-lg overflow-hidden shadow-lg transition-transform transform hover:scale-105">
+                        <img src="https://placehold.co/300x200" alt="QIWA project" class="w-full h-48 object-cover" />
+                        <div class="p-4 text-white">
+                            <h2 class="font-semibold text-lg">QIWA</h2>
+                            <p class="text-muted-foreground">Putting creativity to work for Saudi’s labour market
+                                platform</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </div>
+
+
+
+        <!-- services section
+        <div class="min-h-screen w-full flex items-center justify-center relative p-[3vw] flex-col bg-black">
+            <div class=" text-white text-center">
+                <h4 class=" mb-[1vw] text-[1vw] font-medium ">Agency & Venture <samp
+                        class="text-[0.7vw] bg-white text-black py-1 px-1 rounded-full">Models</samp></h4>
+                <h2 class="text-[4vw] font-thin text-white ">Explore our services</h2>
+                <h2 class="text-[4vw] font-thin text-white ">& engagement models</h2>
+            </div>
+        </div> -->
+
         <!-- About -->
-        <div class="About"></div>
+        <div id="About" class="bg-black p-6 ">
+            <div class=" mx-auto p-6 bg-black">
+                <h1 class="text-4xl font-bold text-white mb-4">About Index </h1>
+                
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="flex flex-col text-white">
+                        <img src="https://placehold.co/600x400" alt="Clothing rack" class="rounded-lg shadow-lg" />
+                        <h1 class="text-3xl font-bold mt-4">Our Journey of tee creation from concept to cotton</h1>
+                        <p class="text-muted-foreground mt-2">
+                            Pleasure and so read the so must have as on was want up of I will rival in came this touched
+                            got a physics to traveling so all especially refinement monstrous desk they was arrange the
+                            overall
+                            helplessly out of particularly ill are purer.
+                        </p>
+                    </div>
+                    <div class="flex flex-col">
+                        <img src="https://placehold.co/600x400" alt="Clothing display" class="rounded-lg shadow-lg" />
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mt-8 text-white">
+                    <div class="bg-card p-4 rounded-lg shadow-md text-center">
+                        <img src="https://placehold.co/50x50" alt="Free Shipping Icon" class="mx-auto mb-2" />
+                        <h2 class="font-semibold">Free Shipping</h2>
+                        <p class="text-muted-foreground">Enjoy the freedom of hassle-free deliveries with our Free
+                            Shipping service.</p>
+                    </div>
+                    <div class="bg-card p-4 rounded-lg shadow-md text-center">
+                        <img src="https://placehold.co/50x50" alt="Fast Delivery Icon" class="mx-auto mb-2" />
+                        <h2 class="font-semibold">Fast Delivery</h2>
+                        <p class="text-muted-foreground">With our Fast Delivery service, your order will be expedited to
+                            reach you in no time.</p>
+                    </div>
+                    <div class="bg-card p-4 rounded-lg shadow-md text-center">
+                        <img src="https://placehold.co/50x50" alt="Quality Guarantee Icon" class="mx-auto mb-2" />
+                        <h2 class="font-semibold">100% Quality Guarantee</h2>
+                        <p class="text-muted-foreground">Rest easy knowing your satisfaction is our top priority!</p>
+                    </div>
+                    <div class="bg-card p-4 rounded-lg shadow-md text-center">
+                        <img src="https://placehold.co/50x50" alt="Ecowave Efficiency Icon" class="mx-auto mb-2" />
+                        <h2 class="font-semibold">Ecowave efficiency</h2>
+                        <p class="text-muted-foreground">Experience the pinnacle of sustainability with Ecowave
+                            Efficiency!</p>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mt-8 text-center text-white">
+                    <div>
+                        <h3 class="text-2xl font-bold">15K+</h3>
+                        <p class="text-muted-foreground">Each number in this milestone represents a satisfied customer.
+                        </p>
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold">8+</h3>
+                        <p class="text-muted-foreground">Each experience is a chapter in the grand story of Trendzy.</p>
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold">15</h3>
+                        <p class="text-muted-foreground">Fashionable, comfy, and quality shirts loved by many.</p>
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold">92%</h3>
+                        <p class="text-muted-foreground">Mostly natural ingredients for a purer, cleaner choice.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
         <!-- Contact -->
-        <div class="Contact">
+        <div id="Contact" class="Contact p-6 bg-black">
             <div class="min-h-screen flex items-center justify-center bg-black text-white p-6">
                 <div class="max-w-4xl w-full grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div>
@@ -130,7 +246,7 @@
                         <form class="space-y-4" action="https://api.web3forms.com/submit" method="POST">
                             <input type="hidden" name="access_key" value="d291a95f-a3a6-45c2-837b-359a1eef1cec">
                             <input type="text" name='name' placeholder="Enter your name"
-                                class="w-full p-3 bg-black Font2 border border-white  focus:outline-none focus:border-zinc-300"
+                                class="w-full p-3 bg-[#000000b8] Font2 border border-white  focus:outline-none focus:border-zinc-300"
                                 required />
                             <input type="email" name="email" id="email" placeholder="Enter your email" value=""
                                 class="w-full p-3 bg-black Font2 border border-white  focus:outline-none focus:border-zinc-300"
@@ -149,10 +265,10 @@
         </div>
 
         <!-- Footer -->
-        <div class="Footer bg-black ">
-            <h1 class="text-[17vw] font-semibold text-white ">VARIABLE</h1>
+        <div class="Footer bg-black p-6">
+            <h1 class="text-[17vw]   font-semibold text-white md:text-left lg:text-left text-center">VARIABLE</h1>
             <footer class="bg-background p-8 text-white">
-                <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+                <div class="container mx-auto grid grid-cols-2 md:grid-cols-4 gap-8">
                     <div>
                         <h2 class="text-xl font-semibold">Contact</h2>
                         <p>Variable Agency</p>
@@ -164,8 +280,8 @@
                         <h2 class="text-xl font-semibold">Pages</h2>
                         <ul>
                             <li><a href="#" class="hover:text-primary">Home</a></li>
-                            <li><a href="#" class="hover:text-primary">Work</a></li>
-                            <li><a href="#" class="hover:text-primary">Solutions</a></li>
+                            <li><a href="" class="hover:text-primary">Work</a></li>
+                            <li><a href="#About" class="hover:text-primary">About</a></li>
                             <li><a href="#" class="hover:text-primary">Contact</a></li>
                         </ul>
                     </div>
@@ -181,8 +297,8 @@
                     <div>
                         <h2 class="text-xl font-semibold">Links</h2>
                         <ul>
-                            <li><a href="#" class="hover:text-primary">add context</a></li>
-                            <li><a href="#" class="hover:text-primary">add context</a></li>
+                            <li><a href="#" class="hover:text-primary">intag</a></li>
+                            <li><a href="#" class="hover:text-primary"></a></li>
                             <li><a href="#" class="hover:text-primary">add context</a></li>
                             <li><a href="#" class="hover:text-primary">add context</a></li>
                         </ul>
